# supersingular-elliptic-curve-rs

./: .gitignore  Cargo.toml  README.md
impl_ops/: Cargo.toml
impl_ops/src/: lib.rs
src/: fp.rs  group.rs  lib.rs  matrix.rs  poly.rs  polynomial.rs
src/algebra/: mod.rs  quaternion_algebra.rs
src/elliptic_curve/: mod.rs  mont_curve.rs
src/endomorphism/: mod.rs  ss_end_ring.rs
src/field/: fp.rs  fp2.rs  mod.rs
src/isogeny/: mod.rs  rational_isogeny.rs  richelot_isogeny.rs
tests/: matrix_test.rs
